name:                servant-xml-marshal
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.12.0 && <4.13
                     , bytestring >=0.10.8 && <0.11
                     , conduit >=1.3.4.3 && <1.3.4.4
                     , containers >=0.6.0 && <0.7
                     , http-media >= 0.7
                     , servant >=0.16 && <0.19
                     , xml-conduit >=1.8.0 && <1.9
                     , xml-marshal <=0.0.1.0 && <0.0.2
  exposed-modules:     Servant.XML
