name:                servant-xml-marshal
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.12.0 && <4.15
                     , containers >=0.6.0 && <0.7
                     , http-media >= 0.7.0 && <0.8
                     , servant >=0.16 && <0.19
                     , xml-conduit >=1.8.0.1 && <1.9.2
                     , xml-marshal >=0.0.1.0 && <0.0.2
  exposed-modules:     Servant.XML
